# MagicVLA

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  build.sh  pyproject.toml
.github/: pull_request_template.md
src/magicvla/: __init__.py
