[project]
name = "MagicVLA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
    "tomli>=2.2.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "typer>=0.15.3",
]

[project.optional-dependencies]
rl = [
    "verl[sglang,vllm]",
    "requests",
    "qwen-vl-utils",
    "datasets==3.6.0",
    "MagicSim",
    "MagicRos",
]

robot = [
    "MagicSim[isaac]",
    "MagicRos",
]

[tool.uv.workspace]
members = [
    "MagicSim",
    "MagicSim/MagicRos",
    "MagicSim-verl"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.pip]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
MagicSim = {workspace = true}
MagicRos = {workspace = true}
verl = {workspace = true}

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "Third_Party",
    "*.ipynb"
]
ignore = ["E402"]
